--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,8 +11,21 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
+.information-container{
+  display: flex;
+  gap:52px;
+  justify-content: center;
+}
+
+.item-container{
+  max-width: 200px;
+}
+.text{
+  flex-wrap: wrap;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
