--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,74 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  flex:1;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  text-align: left;
+  font-weight: 900;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
 }
 
+.content{
+  display: flex;
+  flex: auto;
+}
+
+.cards-container{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap:20px;
+}
+.card{
+  padding: 10px;
+  width: 300px;
+  flex: auto;
+  text-align: left;
+}
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  text-align: left;
+  flex-shrink: 0;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+  font-size: 24px;
+}
+
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
